# caliptra-sw

./: Cargo.toml
.github/workflows/: build-test.yml  nightly-fuzzing.yml  reusable-aflplusplus.yml  reusable-libfuzzer.yml
drivers/: Cargo.toml
drivers/fuzz/: Cargo.toml
drivers/fuzz/fuzz_targets/: fuzz_target_lms.rs
drivers/fuzz/src/: fuzz_target_lms.rs
drivers/src/: ecc384.rs  fuse_bank.rs  lib.rs  lms.rs  sha256.rs
error/src/: lib.rs
fmc/src/: fmc_env.rs  main.rs
fmc/src/flow/: crypto.rs
hw-model/test-fw/: Cargo.toml
hw-model/tests/: model_tests.rs
image/types/: Cargo.toml
image/types/src/: lib.rs
image/verify/: image_verify_fuzz_harness.rs
image/verify/afl/: Cargo.toml
image/verify/afl/src/: fuzz_target_1.rs  fuzz_target_updatereset.rs
image/verify/fuzz/: Cargo.toml
image/verify/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_updatereset.rs
image/verify/fuzz/src/: fuzz_target_1.rs  fuzz_target_coldreset.rs  fuzz_target_common.rs  fuzz_target_updatereset.rs
image/verify/src/: lib.rs  verifier.rs
lms-types/: Cargo.toml
rom/dev/doc/test-coverage/: test-coverage.md
rom/dev/src/: main.rs  rom_env.rs  verifier.rs
rom/dev/src/flow/cold_reset/: crypto.rs  fmc_alias.rs  fw_processor.rs  idev_id.rs  ldev_id.rs
rom/dev/tests/: test_image_validation.rs
runtime/src/: fips.rs  lib.rs  main.rs
sw-emulator/lib/bus/src/: bus.rs
sw-emulator/lib/cpu/src/: cpu.rs
sw-emulator/lib/periph/src/: asym_ecc384.rs  hash_sha512.rs  hmac_sha384.rs
x509/: x509_fuzz_harness.rs
x509/afl/: Cargo.toml
x509/afl/src/: fuzz_target_1.rs  x509_fuzz_harness.rs
x509/fuzz/: Cargo.toml
x509/fuzz/fuzz_targets/: fuzz_target_1.rs
