# Licensed under the Apache-2.0 license.

[package]
name = "caliptra-image-types"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
arbitrary = { version = "1.3.0", optional = true, features = ["derive"] }
caliptra-lms-types.workspace = true
memoffset.workspace = true
zerocopy.workspace = true

[features]
default = ["std"]
std = []