# Licensed under the Apache-2.0 license

[package]
name = "caliptra-x509-afl"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
afl = "*"
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.caliptra-x509]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
